# OOP-LABS

./: README.md
laba1/: CMakeLists.txt  README.md
laba1/src/: main.cpp  remove_vowels.cpp  remove_vowels.h
laba1/tests/: test_remove_vowels.cpp
